Import of TBR/ReRe-0.002 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.002
gitpan-cpan-path:         TBR/ReRe-0.002.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,12 +2,13 @@ NAME
     ReRe - Simple Redis Rest Interface
 
 VERSION
-    version 0.001
+    version 0.002
 
 DESCRIPTION
     ReRe is a simple redis rest interface write in Perl and "a" in
     Mojolicious<, with some features like:
 
+    Access your Redis database directly from Javascript.
     Config file for store users and access control list.
     REST interface to make your life more easy in some world.
     Support to run as daemon (simple web-service), CGI, FastCGI or PSGI.
