Import of TBR/ReRe-0.005 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.005
gitpan-cpan-path:         TBR/ReRe-0.005.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-* 0.004 (01/06/2001)
+* 0.005 (02/06/2011)
+Add server.conf
+
+* 0.004 (01/06/2011)
 Fix config file in lib/ReRe.pm
 
 * 0.003 (01/06/2011)
