--- a/README
+++ b/README
@@ -2,11 +2,11 @@ NAME
     ReRe - Simple Redis Rest Interface
 
 VERSION
-    version 0.004
+    version 0.005
 
 DESCRIPTION
-    ReRe is a simple redis rest interface write in Perl and "a" in
-    Mojolicious<, with some features like:
+    ReRe is a simple redis rest interface write in Perl and Mojolicious,
+    with some features like:
 
     Access your Redis database directly from Javascript.
     Config file for store users and access control list.
