Import of TBR/ReRe-0.007 from CPAN.
gitpan-cpan-distribution: ReRe
gitpan-cpan-version:      0.007
gitpan-cpan-path:         TBR/ReRe-0.007.tar.gz
gitpan-cpan-author:       TBR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+* 0.007 (02/06/2011)
+CIDR Authentication.
+
 * 0.006 (02/06/2011)
 Support for lists.
 Check if redis is up, when start rere_server.pl
